--- a/html/right.html
+++ b/html/right.html
@@ -17,7 +17,7 @@
         <img src="./images/Screenshot 2024-08-12 153719.png" alt="photo"></div>
         <div class="para2">
         <h1>About the team</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse aperiam deserunt voluptates cum. Aut, tempore voluptatibus. Consequatur sit quidem facilis nemo dolorem corporis cumque distinctio quas iste quod, illum totam?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio in dolore dolores iste laudantium, hic minus ipsum deleniti fugit blanditiis vitae. Labore, voluptatibus id reprehenderit optio provident omnis ea eligendi facilis, nihil magnam modi harum accusamus quo voluptatem laudantium alias cum consequatur excepturi dolorum magni exercitationem. Omnis, placeat. Perspiciatis, qui doloremque beatae, blanditiis laudantium minus eveniet consequuntur nemo facere sit laborum quae quidem accusamus fuga eligendi possimus iusto necessitatibus quam explicabo repudiandae corporis vero! Repudiandae necessitatibus consequuntur in exercitationem nostrum eos iste tempore enim. Facilis atque, dolor corrupti quaerat enim esse, autem perspiciatis soluta reprehenderit necessitatibus distinctio repudiandae, culpa eum!</p>
         <button>Read More</button>
         
     </div>
