--- a/html/about.html
+++ b/html/about.html
@@ -10,5 +10,6 @@
     
     <h1>Abut Us</h1>
     <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo fugit laborum incidunt corporis! Tempora eligendi ducimus, aspernatur nisi fugit eaque autem ipsam, eius culpa, facere saepe mollitia veritatis amet fugiat!</P>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi temporibus asperiores ducimus illum dicta obcaecati, quasi maiores magni aliquam officiis earum dolorem vero quaerat omnis, dolore odio nemo veritatis vitae provident aspernatur? Deleniti neque ipsa libero commodi repellat tempora, sit atque similique minus fugiat, ipsum dolorum. Perspiciatis beatae quam, ducimus, magni porro asperiores doloremque culpa aspernatur eum minima excepturi atque at veniam amet deleniti ea hic vitae non quis adipisci.</p>
 </body>
 </html>
