--- a/Dom&API/wetherApi/index.html
+++ b/Dom&API/wetherApi/index.html
@@ -51,8 +51,7 @@
     </div>
 
     <script>
-      const apiKey = "5952b60abd5a3cf95eae3581df40407e"; // Replace with your OpenWeatherMap API key
-
+      const apiKey = "5952b60abd5a3cf95eae3581df40407e"; 
       document
         .getElementById("getWeatherBtn")
         .addEventListener("click", function () {
